--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.13.3",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.3",
     "@mui/styled-engine-sc": "^5.12.0",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -23,7 +24,7 @@
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "react-native-snap-carousel": "^3.9.1",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
